--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,10 +4,10 @@
 ENVIRONMENT=development
 
 # Main Database (PostgreSQL)
-DATABASE_URL=postgresql://postgres:password@localhost:5432/betsan_crm
+DATABASE_URL=postgresql://postgres:password@localhost:5432/otomasyon_crm
 
 # Test Database (SQLite)
-TEST_DATABASE_URL=sqlite:///./test_betsan.db
+TEST_DATABASE_URL=sqlite:///./test_otomasyon.db
 
 # JWT Configuration
 SECRET_KEY=your-super-secret-key-change-in-production-with-a-very-long-random-string
